# Argo

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  check.sh  flake.nix  main.cc  single_header.cc
.github/workflows/: test-mac.yml  test-ubuntu.yml  test.yml
Argo/: Argo.cc  ArgoArg.cc  ArgoArgName.cc  ArgoExceptions.cc  ArgoHelpGenerator.cc  ArgoInitializer.cc  ArgoMetaAssigner.cc  ArgoMetaChecker.cc  ArgoMetaLookup.cc  ArgoMetaParse.cc  ArgoNArgs.cc  ArgoParser.cc  ArgoParserImpl.cc  ArgoTypeTraits.cc  ArgoValidation.cc  StdModule.cc
benchmarks/: argo.cc  argparse.cc  cli11.cc  empty.cc  help.cc  parser.cc  subprocess.cc
generator/: Argo.hh  generate.py
include/: Argo.hh
include/Argo/: Argo.hh  ArgoMacros.hh
module/: ArgoArg.cc  ArgoExceptions.cc  ArgoMetaLookup.cc  ArgoMetaParse.cc  ArgoParserImpl.cc  ArgoTypeTraits.cc  StdModule.cc
src/: Argo.cc  Argo.ccm  ArgoArg.cc  ArgoException.cc  ArgoExceptions.cc  ArgoHelpGenerator.cc  ArgoInitializer.cc  ArgoMetaAssigner.cc  ArgoMetaChecker.cc  ArgoMetaLookup.cc  ArgoMetaParse.cc  ArgoMetaValidation.cc  ArgoNArgs.cc  ArgoParser.cc  ArgoParserImpl.cc  ArgoTypeTraits.cc  ArgoValidation.cc  StdModule.cc  StdModules.cc  TypeTraits.cc
tests/: AllTypes.cc  BasicTypes.cc  ExampleCode.cc  Exceptions.cc  HelpGenerate.cc  PositionalArgument.cc  STLTypes.cc  Subcommand.cc  TestHelper.h  parser.cc
